--- a/TestTask/src/Components/News/News.scss
+++ b/TestTask/src/Components/News/News.scss
@@ -8,6 +8,43 @@ body {
   margin: 0;
 }
 
+.news{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  min-height: 10vh;
+  
+  .title{
+    text-align:left;
+    width: 700px;
+    margin-bottom: 10px;
+  }
+  .content{
+    width: 700px;
+    text-align:left;
+  }
+}
+
+@media (max-width:849px){
+  .news{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    
+    .title{
+      text-align:left;
+      width: 100%;
+      margin-bottom: 10px;
+    }
+    .content{
+      width: 100%;
+      text-align:left;
+    }
+  }
+}
+
 .ptr-element {
   position: absolute;
   top: 0;
